# ai-engineering-fordham

./: homework-1.ipynb  pyproject.toml
scripts/: homework-1.ipynb  homework-3.ipynb  homework-4.ipynb
